// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthProvider.svelte > oauth > should render oauth button 1`] = `
<div>
  <!---->
  <!---->
  <button
    data-button-root="true"
    tabindex="0"
    type="button"
  >
    <!---->
    <!---->
    <rk-icon
      aria-label="i-auth-google"
      data-tag="icon"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="i-auth-google"
      />
    </rk-icon>
    <!---->
     
    <span>
      Sign in with Google
    </span>
    
    
  </button>
  
  
  
</div>
`;

exports[`AuthProvider.svelte > oauth > should render oauth button with scopes 1`] = `
<div>
  <!---->
  <!---->
  <button
    data-button-root="true"
    tabindex="0"
    type="button"
  >
    <!---->
    <!---->
    <rk-icon
      aria-label="i-auth-azure"
      data-tag="icon"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="i-auth-azure"
      />
    </rk-icon>
    <!---->
     
    <span>
      Sign in with Azure
    </span>
    
    
  </button>
  
  
  
</div>
`;

exports[`AuthProvider.svelte > password > should handle errors 1`] = `
<div>
  <!---->
  <!---->
  <input-field
    class="flex flex-col input-email   empty"
  >
    <label
      for="email"
    >
      email
    </label>
    <!---->
     
    <field
      aria-label="email"
      class="flex w-full flex-row items-center"
    >
      <rk-icon
        aria-label="i-auth-email"
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="i-auth-email"
        />
      </rk-icon>
      <!---->
       
      <!---->
       
      <!---->
      <input
        autocomplete="on"
        id="email"
        name="email"
        type="email"
      />
      
      <!---->
       
      <!---->
    </field>
     
    <!---->
  </input-field>
  <!---->
   
  <input-field
    class="flex flex-col input-password   empty"
  >
    <label
      for="password"
    >
      Password
    </label>
    <!---->
     
    <field
      aria-label="Password"
      class="flex w-full flex-row items-center"
    >
      <rk-icon
        aria-label="i-auth-password"
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="i-auth-password"
        />
      </rk-icon>
      <!---->
       
      <!---->
       
      <!---->
      <input
        id="password"
        name="password"
        type="password"
      />
      
      <!---->
       
      <!---->
    </field>
     
    <!---->
  </input-field>
  <!---->
   
  <button
    class="col-start-3 text-center h-10 mt-4 bg-primary text-white"
  >
    Sign in
  </button>
  
  
</div>
`;

exports[`AuthProvider.svelte > password > should render email/password auth 1`] = `
<div>
  <!---->
  <!---->
  <input-field
    class="flex flex-col input-email   empty"
  >
    <label
      for="email"
    >
      email
    </label>
    <!---->
     
    <field
      aria-label="email"
      class="flex w-full flex-row items-center"
    >
      <rk-icon
        aria-label="i-auth-email"
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="i-auth-email"
        />
      </rk-icon>
      <!---->
       
      <!---->
       
      <!---->
      <input
        autocomplete="on"
        id="email"
        name="email"
        type="email"
      />
      
      <!---->
       
      <!---->
    </field>
     
    <!---->
  </input-field>
  <!---->
   
  <input-field
    class="flex flex-col input-password   empty"
  >
    <label
      for="password"
    >
      Password
    </label>
    <!---->
     
    <field
      aria-label="Password"
      class="flex w-full flex-row items-center"
    >
      <rk-icon
        aria-label="i-auth-password"
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="i-auth-password"
        />
      </rk-icon>
      <!---->
       
      <!---->
       
      <!---->
      <input
        id="password"
        name="password"
        type="password"
      />
      
      <!---->
       
      <!---->
    </field>
     
    <!---->
  </input-field>
  <!---->
   
  <button
    class="col-start-3 text-center h-10 mt-4 bg-primary text-white"
  >
    Sign in
  </button>
  
  
</div>
`;
